--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Hash#Tweets
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BVA8z9njnp6SsBX0EnIm5bpivPeNZ+YOsPMFWLH2F8c=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=hash_tweets_web
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,3 +31,8 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+TWITTER_CONSUMER_KEY=EhZUrUalFsb1OcDDGsMPksJEf
+TWITTER_CONSUMER_SECRET=udvlU52hIBBwDGsoIKSWoitFtGuWNTq2WxH7KkOaOF8FRcUOQu 
+TWITTER_ACCESS_TOKEN=900000889968218112-ayA98jNvQhfzuj7dVn0VW9xc9WVwJf2
+TWITTER_ACCESS_TOKEN_SECRET=E06FdKU2DOQrvCGlTTBIvX29QfmzhcjSPvIuw1LaZDBMi
